# MCP-Servers

./: sales_report.xlsx  test_data.xlsx
MCP-Client-Manual/: .env  .env.example  .gitignore  README.md  advanced_mcp_server.py  config.json  main.py  mcp_client.py  pyproject.toml  requirements.txt  test.py
file-system/: README.md  check.py  pyproject.toml  read.py  requirements.txt  server.py
file-system/resources/: __init__.py  excel_charts_pivot_tools.py  excel_table_pivot_tools.py  excel_tools.py  extractor.py
file-system/resources/core/: __init__.py  dependencies.py  extraction_options.py  file_utils.py
file-system/resources/readers/: __init__.py  data_readers.py  ebook_readers.py  format_readers.py  office_readers.py  pdf_reader.py  text_reader.py
file-system/resources/server_definitions/: __init__.py  prompt_definitions.py  resource_definitions.py  tool_definitions.py
file-system/resources/server_utils/: __init__.py  file_operations.py
file-system/resources/utils/: __init__.py  formatters.py  io_utils.py
