[project]
name = "file-system"
version = "0.1.0"
description = "File management MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ebooklib>=0.19",
    "fastmcp>=2.2.6",
    "formulas>=1.2.10",
    "mcp[cli]>=1.7.1",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.6",
    "pillow>=11.2.1",
    "pymupdf>=1.25.5",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "ruff>=0.11.8",
    "striprtf>=0.0.29",
    "tabula-py>=2.10.0",
]

